Some partially implemented patching code - new strategy, patch everything at runtime after the first attempt to load a class which needs patched.
Signed-off-by: Ross Allan <rallanpcl@gmail.com>